Cacti CHANGELOG

1.2.27
-issue#5622: Errors and deprecation warnings with PHP 8.3.0
-issue#5629: auth_changepassword.php cannot return to the refer url by just clicking the "Return" button once
-issue#5638: Add tooltip info about IPv6 address
-issue#5648: Fractional time offsets can cause huge webserver error-logs
-issue#5649: Inapprorpiate use of PHP_OS in lib/ping.php on Windows Platform
-issue#5655: Function get_allowed_devices can returns incorrect device list if session user_id variable is not set

1.2.26
-security#GHSA-xwqc-7jc4-xm73: XSS vulnerability when importing a template file
-security#GHSA-pfh9-gwm6-86vp: RCE vulnerability when managing links
-security#GHSA-vr3c-38wh-g855: SQL Injection vulnerability when managing poller devices
-security#GHSA-wc73-r2vw-59pr: XSS vulnerability when adding new devices
-security#GHSA-q7g7-gcf6-wh4x: XSS vulnerability when viewing data sources in debug mode
-security#GHSA-w85f-7c4w-7594: SQL Injection vulnerability when managing SNMP Notification Receivers
-issue#5464: When viewing data sources, an undefined variable error may be seen
-issue#5478: Improvements for Poller Last Run Date
-issue#5481: Attempting to edit a Data Query that does not exist throws warnings and not an GUI error
-issue#5483: Improve PHP 8.1 support when adding devices
-issue#5485: Viewing Data Query Cache can cause errors to be logged
-issue#5489: Preserve option is not properly honoured when removing devices at command line
-issue#5490: Infinite recursion is possible during a database failure
-issue#5492: Monitoring Host CPU's does not always work on Windows endpoints
-issue#5493: Multi select drop down list box not rendered correctly in Chrome and Edge
-issue#5494: Selective Plugin Debugging may not always work as intended
-issue#5495: During upgrades, Plugins may be falsely reported as incompatible
-issue#5496: Plugin management at command line does not work with multiple plugins
-issue#5502: Improve PHP 8.1 support for incrementing only numbers